# cpu16

./: .gitignore  .svlint.toml  README.md
design/: Makefile  Veryl.toml  nexysa7.tcl  nexysa7.xdc
design/src/: ALU.veryl  ButtonDebouncer.veryl  CPU.veryl  PPU.veryl  PosEdgeDetector.veryl  RAM.veryl  ROM.veryl  RegisterFile.veryl  ResetConditioner.veryl  SevenSegment.veryl  Top.veryl  UART.veryl  patternTable.hex  prog.hex
design/src/progs/: add.hex  (+6 more)
design/tests/: Makefile  pyproject.toml  results.xml  test_alu.py  test_cpu.py  test_ppu.py  test_register_file.py  test_runner.py  test_top.py
design/tests/sim_build/: sim.vvp
design/tests/traces/: add.jsonl  add32.jsonl  count.jsonl  div.jsonl  mem.jsonl  stack.jsonl  sub.jsonl  text.jsonl
fpga/: Makefile  alchitry.tcl  alchitry.xdc  build_alchitry_au.bat  build_alchitry_au_wsl.sh  build_nexys_a7.bat  build_nexys_a7_wsl.sh  cu.pcf  go.pcf  nexys_a7.tcl  nexys_a7.xdc  project.tcl
fpga/src/: ALU.sv  AlchitryTop.sv  ButtonDebouncer.sv  CPU.sv  FakePullDown.sv  GoBoardSevenSegment.sv  GoBoardTop.sv  NexysA7SevenSegment.sv  NexysA7Top.sv  PPU.sv  RAM.sv  ROM.sv  RegisterFile.sv  ResetConditioner.sv  SevenSegment.sv  SevenSegment4.sv  Top.sv
fpga/testbenches/: RegisterFiler_tb.sv
fpga/veryl/: Veryl.toml  veryl.f
lang/: .gitignore  README.md  main.mjs  moon.mod.json
lang/examples/: assignment.txt  count.txt  fib.txt  function.txt  if.txt
programmer/: prog.py
sim/: Cargo.toml  trace.jsonl
sim/src/: asm.rs  isa.rs  main.rs  procedures.rs  sim.rs
src/: asm.rs  isa.rs  main.rs  procedures.rs  sim.rs
(+18 files in other folders)
