[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Nathan Soufflet <nathsoufflet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cocotb = "1.9"
pytest = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
